--- a/includes/dhtmlxtree.css
+++ b/includes/dhtmlxtree.css
@@ -95,5 +95,8 @@ ul.findContainer li {
 	list-style:none;
 }
 ul.findContainer li:after {content:'';width: 100%; display:inline-block;}
-ul.findContainer li select {float: right;}
-ul.findContainer li input {float: right;}
+ul.findContainer li select {float: right; width: 90%;padding: .75em;}
+ul.findContainer li input {float: right;width: 90%;padding: .75em;}
+ul.findContainer li label {float: right; text-align: center;}
+ul.findContainer li input .schBtn {width: 45%;margin-right: 1em;}
+ul.findContainer li input .clrBtn {width: 45%;}
