--- a/includes/dhtmlxtree.css
+++ b/includes/dhtmlxtree.css
@@ -100,3 +100,4 @@ ul.findContainer li input {float: right;width: 88%;padding: .75em;border-radius:
 ul.findContainer li label {text-align: center;}
 ul.findContainer li input.schBtn {float: left;width: 44%;margin-right: 1em;margin-top: 1.6em;}
 ul.findContainer li input.clrBtn {float: left;width: 44%;margin-top: 1.6em;}
+h4 {margin-left: 1.4em;}
