--- a/includes/dhtmlxtree.css
+++ b/includes/dhtmlxtree.css
@@ -98,6 +98,6 @@ ul.findContainer li:after {content:'';width: 100%; display:inline-block;}
 ul.findContainer li select {float: right; width: 90%;padding: .75em;border-radius: 5px;}
 ul.findContainer li input {float: right;width: 88%;padding: .75em;border-radius: 5px;}
 ul.findContainer li label {text-align: center;}
-ul.findContainer li input.schBtn {float: left;width: 44%;margin-right: 1em;margin-top: 1.6em;}
-ul.findContainer li input.clrBtn {float: left;width: 44%;margin-top: 1.6em;}
-h4 {margin-left: 1.4em;}
+ul.findContainer li input.schBtn {float: left;width: 43%;margin-right: 1em;margin-left: .5em;margin-top: 1.6em;}
+ul.findContainer li input.clrBtn {float: left;width: 43%;margin-top: 1.6em;}
+h4 {margin-left: 2em;}
