--- a/includes/dhtmlxtree.css
+++ b/includes/dhtmlxtree.css
@@ -100,5 +100,6 @@ ul.findContainer li input {float: right;width: 88%;padding: .75em;border-radius:
 ul.findContainer li label {text-align: center;}
 ul.findContainer li input.schBtn {float: left;width: 43%;margin-right: 1em;margin-left: .5em;margin-top: 1.6em;}
 ul.findContainer li input.clrBtn {float: left;width: 43%;margin-top: 1.6em;}
-h4 {margin-left: 2em;}
+h3 {margin-left: 1em 1.9em;}
+h4 {margin-left: 0;}
 .fullPane {width:98%;clear:both;height: auto;min-height: 700px;padding: 0 20px;}
