--- a/includes/style.css
+++ b/includes/style.css
@@ -1864,6 +1864,14 @@ div.submenu h2:hover {
 .nav-link.dropdown-toggle:hover:after {
 	transform:rotate(-90deg);
 }
+.navbar-toggler {
+    padding: .2rem .5rem;
+    font-size: 1rem;
+    line-height: 1;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
 .card-columns {
 	column-count: 2;
 	column-gap: .5rem;
