--- a/includes/style.css
+++ b/includes/style.css
@@ -1872,6 +1872,26 @@ div.submenu h2:hover {
     border: 1px solid transparent;
     border-radius: .25rem;
 }
+
+.navbar-collapse {
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -ms-flex-align: center;
+    align-items: center;
+    background-color: white;
+    padding: .5rem 1.5rem;
+}
+@media only screen and (max-width: 1200px){
+#headerLinks {
+    width: 100%;
+    z-index: 2;
+    position: absolute;
+    margin-top: 4px;
+    right: 33px;
+}
+}
 .card-columns {
 	column-count: 2;
 	column-gap: .5rem;
