Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -1857,6 +1857,12 @@ div.submenu h2:hover {
 	background: #ffffff url(/images/small-black-down-arrow.gif) no-repeat 100% 100%;
 	color: #0000FF;
 }
+.nav-fill .nav-item {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    text-align: center;
+	margin-top: .5rem;
+}
 .nav-link.dropdown-toggle:hover:before {
 	transform:rotate(0deg);
 }
