--- a/includes/style.css
+++ b/includes/style.css
@@ -4872,7 +4872,7 @@ table.pubtable td { border-bottom: 1px solid gray;padding: 2px 1px;border-right:
 	margin: 0 auto;
 }
 #headerLinks {
-	width: 100%;
+	max-width: 60%;
 	float: right;
 	z-index: 2;
 }
