--- a/includes/style.css
+++ b/includes/style.css
@@ -1786,7 +1786,8 @@ box-shadow: 3px 5px 10px 0px rgba(0,0,0,0.65);*/
 /*	clear:left;*/
 	width:100%;
    margin:0 auto;
-	border-bottom: 3px solid #ccc;
+	border-bottom: 2px solid #ccc;
+	border-top: 2px solid #ccc;
 /* 	font-weight:400;
 	background-color:#D5D5DB;
 	background-color: white;
