--- a/includes/style.css
+++ b/includes/style.css
@@ -4852,8 +4852,8 @@ table.pubtable td { border-bottom: 1px solid gray;padding: 2px 1px;border-right:
 	width: 130px;
 }
 .content_box {
-	width: 100%;
-	margin: 0 auto;
+/*	width: 100%;
+	margin: 0 auto;*/
 }
 #headerLinks {
 	max-width: 60%;
