Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -1907,7 +1907,7 @@ div.submenu h2:hover {
 }
 .nav-item {
 	flex:  1 1 auto;
-	text-align:center;
+/*	text-align:center;*/
 }
 .dropdown {
 	position: relative;
