Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -3984,7 +3984,7 @@ ul.pubLinks {
     width: 100%;
 	margin: 0 auto;
 	margin-bottom: 1em;
-    padding: 1.5em 0 5em 0;
+    padding: 0 0 5em 0;
 }
 .basic_search_box label {padding-top:.15em}
 .basic_search_box li.entry {
