Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -4158,7 +4158,7 @@ span#geogrefDetailCtl.infoLink {
 	text-align:right;
 }
 select#GeorefMethod {
-	width: 600px;
+/*	width: 600px;*/
 }
 .rdoCtl {
 	font-size: small;
