--- a/includes/style.css
+++ b/includes/style.css
@@ -178,6 +178,10 @@ h5, .h5 {
 h6, .h6 {
 	font-size: .75rem;
 }
+.table td {
+	border:none;
+	padding: 0;
+}
 table.sortable a.sortheader {
 	background-color: #eee;
 	color: #666666;
