Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -4168,7 +4168,7 @@ ul.pubLinks {
 .basic_box {
 	width: 95%;
 	margin: 0 auto;
-	padding: 2em 0 3em 0;
+	padding: 2rem 0 5rem 0;
 }
 .basic_wide_box {
 	width: 100%;
