Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -3901,6 +3901,34 @@ ul.loan_buttons li.edit {
 ul.loan_buttons li.edit:hover, ul.loan_buttons li.add:hover, ul.loan_buttons li.barcode:hover {
 	border: 1px solid #666;
 }
+.btn-primary {
+	background-color: #d9f1f3;
+	border: 1px solid hsl(0, 0%, 56%, 1);
+	color: buttontext;
+}
+.btn-sm {
+	margin-top: 0;
+	height: calc(1.5rem + .5rem + 1px);
+}
+.btn-primary:hover {
+	/*background-color: #d3dfe0;*/
+	color: #212529;
+	background-color: #deebec;
+	background: #deebec;
+	border: 1px solid hsl(0, 2%, 47%);
+}
+.btn-primary:focus, .btn-primary.focus, span.data-entry-addon.focus, span.data-entry-addon:focus {
+	background-color: #deebec;
+	color: #212529;
+	border: 1px solid #ced4da;
+	outline: 0;
+	box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
+}
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
+	background-color: #deebec;
+	color: #212529;
+	border: 1px solid #ced4da;
+}
 ul.lisc {
 	-webkit-padding-start: 5px;
 	-moz-padding-start: 5px;
