Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -11,7 +11,7 @@ body {
 	font-size: 15px;
 	line-height: 1.2;
 }
-h3 {
+/*h3 {
 	display: block;
 	font-size: 1.17em;
 	-webkit-margin-before: 0em;
@@ -19,7 +19,7 @@ h3 {
 	-webkit-margin-start: 0px;
 	-webkit-margin-end: 0px;
 	font-weight: bold;
-}
+}*/
 .logout {
 	padding: 0 .25rem;
 	font-size: .85rem;
@@ -160,17 +160,17 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 500;
 }
 h1, .h1 {
-	font-size: 1.35rem;
+	font-size: 1.5rem;
 	margin-bottom: 1rem;
 }
 h2, .h2 {
-	font-size: 1.25rem;
+	font-size: 1.35rem;
 }
 h3, .h3 {
-	font-size: 1.15rem;
+	font-size: 1.25rem;
 }
 h4, .h4 {
-	font-size: 1rem;
+	font-size: 1.15rem;
 }
 h5, .h5 {
 	font-size: .875rem;
