Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -3037,10 +3037,10 @@ div.breadcrumbs {
 	font-size: .6em;
 	font-weight: bold;
 }
-h1 {
+/*h1 {
 	font-size: 2em;
 	font-weight: bold;
-}
+}*/
 /*h2 {
 	font-size: 1.5em;
 	font-weight: bold;
