Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -160,8 +160,9 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 500;
 }
 h1, .h1 {
-	font-size: 1.35rem;
+	font-size: 1.4rem;
 	margin-bottom: 1rem;
+	font-weight: 600;
 }
 h2, .h2 {
 	font-size: 1.25rem;
