Issue: #746 Make new version of original header menu responsive

--- a/includes/style.css
+++ b/includes/style.css
@@ -179,7 +179,7 @@ h5, .h5 {
 h6, .h6 {
 	font-size: .75rem;
 }
-
+input {font-size: 1rem;}
 table.sortable a.sortheader {
 	background-color: #eee;
 	color: #666666;
