--- a/includes/style.css
+++ b/includes/style.css
@@ -1853,7 +1853,7 @@ div.submenu h2:hover {
 	display:none;
 	min-width: 25rem;
 	padding: .5rem 0;
-	margin: .125rem 0 0;
+	margin: -.125rem 0 0 0;
 	background-clip: padding-box;
 	font-size: 1rem;
 	color: #212529;
